test/e2e/chainsaw/single-httproute-filters/resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: single-httproute-filters-stable-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo
---
apiVersion: v1
kind: Service
metadata:
  name: single-httproute-filters-canary-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo
